# Ben_cloud

./: .gitignore  AGENTS.md  Ben.sh  Makefile  README.md
Benben/: .env.example  AGENTS.md  Makefile  README.md  app.py  benben.sh  pyproject.toml
Benben/apps/: main.py
Benben/apps/api/: pyproject.toml  router.py
Benben/apps/api/routes/: auth.py  editor.py  health.py
Benben/apps/core/: auth.py  config.py
Benben/apps/schemas/: editor.py
Benben/apps/services/: audit.py  editor.py  exporter.py  rate_limit.py  storage.py  templates.py
Benben/apps/web/: router.py
Benben/apps/web/routes/: pages.py
Benben/static/: editor.css  editor.js
Benben/templates/: editor.html
Benben/tests/: test_security_baseline.py
Benbot/apps/api/: alembic.ini  pyproject.toml
Benbot/apps/api/alembic/: env.py
Benbot/apps/api/alembic/versions/: 20260306_0001_baseline.py  20260307_0002_user_project_access.py
Benbot/apps/api/scripts/: init_admin.py
Benbot/apps/api/src/benbot_api/: main.py
Benbot/apps/api/src/benbot_api/api/: router.py
Benbot/apps/api/src/benbot_api/core/: config.py  registry.py
Benbot/apps/api/src/benbot_api/db/: session.py
Benbot/apps/api/src/benbot_api/models/: __init__.py  bug_report.py  project_log.py  project_stat.py  user.py  user_project_access.py
Benbot/apps/api/src/benbot_api/repositories/: __init__.py  bug_reports.py  metrics.py  project_logs.py  project_stats.py  user_project_access.py  users.py
Benbot/apps/api/src/benbot_api/schemas/: __init__.py  bug_repair.py  bugs.py  projects.py  user_access.py  web.py
Benbot/apps/api/src/benbot_api/services/: auth.py  backup.py  bug_repair.py  bugs.py  health.py  logs.py  metrics.py  project_access.py  project_control.py  project_env.py  project_views.py  stats.py  web_pages.py
Benbot/apps/api/src/benbot_api/web/: deps.py  router.py  templating.py
Benbot/apps/api/tests/: test_admin_users_routes.py  test_api_token_auth.py  test_auth_security.py  test_bug_repair_routes.py  test_bug_repair_service.py  test_bugs_routes.py  test_bugs_service.py  test_core_config_projects.py  test_metrics.py  test_pages_goto.py  test_pages_routes.py  test_project_access_service.py  test_project_catalog.py  test_project_env_service.py  test_project_views_service.py  test_projects_control.py  test_projects_env_routes.py  test_web_deps.py  test_web_pages_assembler.py
Benhealth/apps/api/: pyproject.toml
Benhealth/apps/api/alembic/: env.py
Benhealth/apps/api/alembic/versions/: 202603080001_initial_focus_entries.py  202603080002_health_records.py  202603080003_health_record_review_workflow.py
Benhealth/apps/api/src/benhealth_api/: main.py
Benhealth/apps/api/src/benhealth_api/api/: deps.py  router.py
Benhealth/apps/api/src/benhealth_api/core/: config.py
Benhealth/apps/api/src/benhealth_api/db/: session.py
Benhealth/apps/api/src/benhealth_api/models/: __init__.py  health_record.py
Benhealth/apps/api/src/benhealth_api/repositories/: health_records_repo.py
Benhealth/apps/api/tests/: conftest.py  test_auth.py  test_health_records_api.py
Benlab/apps/api/: alembic.ini  pyproject.toml
Benlab/apps/api/alembic/: env.py
Benlab/apps/api/alembic/versions/: 43cc4d187676_baseline_schema.py  5d6f35c24f8b_add_member_connections_table.py  d150b57c2b59_add_publications_table.py
Benlab/apps/api/src/benlab_api/: __init__.py  main.py
Benlab/apps/api/tests/: conftest.py  test_api_account_admin.py  test_api_board_echoes_assets_digest_vector.py  test_api_home_notice_records.py  test_auth_service.py  test_core_config_paths.py  test_event_views_service.py  test_health.py  test_init_db_seed_admin.py  test_item_views_service.py  test_location_views_service.py  test_member_connections_service.py  test_member_profiles_service.py  test_misc_views_service.py  test_web_index_graphs.py  test_web_member_profiles.py
Benlink/apps/api/: Makefile  alembic.ini  pyproject.toml
Benlink/apps/api/alembic/: env.py
Benlink/apps/api/alembic/versions/: 001_initial_links.py  002_review_workflow.py
Benlink/apps/api/src/benlink_api/: __init__.py  main.py  web.py
Benlink/apps/api/tests/: test_health.py  test_links.py
Benome/apps/api/: pyproject.toml
Benome/apps/api/alembic/: env.py
Benome/apps/api/alembic/versions/: 9f4b7a1d2c3e_baseline_schema.py  a1b2c3d4e5f6_guest_booking_nullable_customer.py  b2c3d4e5f6a7_add_property_media_table.py
Benome/apps/api/src/benome_api/: __init__.py  dependencies.py  main.py
Benome/apps/api/tests/: conftest.py  test_auth_and_permissions.py  test_booking_flow.py  test_statistics_and_users.py  test_web_home.py
Benoss/apps/api/: pyproject.toml
Benoss/apps/api/alembic/: env.py
Benoss/apps/api/alembic/versions/: e2b74479111a_baseline_schema.py
Benoss/apps/api/src/benoss_api/: __init__.py  main.py
Benoss/apps/api/tests/: test_admin_views_service.py  test_assets_views_service.py  test_auth_service.py  test_board_views_service.py  test_digest_views_service.py  test_echoes_views_service.py  test_health.py  test_home_views_service.py  test_migrations.py  test_notice_views_service.py  test_page_views_service.py  test_records_commands_service.py  test_records_feed_route.py  test_records_mutations_route.py  test_records_repo.py  test_records_service.py  test_sso_route.py  test_vector_service.py
Bensci/apps/api/: alembic.ini  deps.py  pyproject.toml  router.py
Bensci/apps/api/alembic/: env.py
Bensci/apps/api/alembic/versions/: 20260302_0001_initial_schema.py  20260303_0002_add_article_embeddings.py  20260304_0003_add_llm_query_filter_cache_tables.py  20260306_0004_add_article_note.py  20260306_0005_add_note_to_articles_fts.py
Bensci/apps/api/routers/: articles.py  auth.py  enrichment.py  health.py  ingestion.py  providers.py  tags.py  tasks.py
Benusy/apps/api/: pyproject.toml
Benusy/apps/api/alembic/: env.py
Benusy/apps/api/alembic/versions/: 43b1d4e82862_baseline_schema.py
Benusy/apps/api/src/benusy_api/: dependencies.py  main.py
Benusy/apps/api/tests/: conftest.py  test_assignments_orphan_task.py  test_core_config_paths.py  test_public_config.py  test_scheduler.py  test_sso_auth.py
(+914 files in other folders)
