[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benben-api"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    "oss2>=2.18.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["apps"]

[tool.hatch.build.targets.sdist]
include = ["apps/", "app.py", "templates/"]
