[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benbot-api"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.13.0",
    "fastapi>=0.115.0",
    "gunicorn>=22.0.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2.0",
    "starlette>=0.41.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PyYAML>=6.0.0",
    "werkzeug>=3.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
benbot-api = "benbot_api.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/benbot_api"]

[tool.hatch.build.targets.sdist]
include = ["src/"]
