[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benoss-api"
version = "2.5.1"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "gunicorn>=22.0.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2.0",
    "starlette>=0.41.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "werkzeug>=3.0.0",
    "oss2>=2.18.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["httpx>=0.27.0", "pytest>=8.0.0", "pytest-asyncio>=0.23.0", "alembic>=1.13.0"]

[project.scripts]
benoss-api = "benoss_api.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/benoss_api"]

[tool.hatch.build.targets.sdist]
include = ["src/"]
