[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bensci-metadata-service"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "gunicorn>=22.0.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "openai>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["apps"]

[tool.hatch.build.targets.sdist]
include = ["apps/"]
